[package]
name = "cardano-tx-viz"
version = "0.1.0"
edition = "2021"
default-run = "cardano-tx-viz"

[lib]
name = "cardano_tx_viz"
path = "src/lib.rs"

[[bin]]
name = "cardano-tx-viz"
path = "src/main.rs"

[[bin]]
name = "test_fetch"
path = "test_fetch.rs"

[dependencies]
# Terminal UI
ratatui = "0.27"
crossterm = "0.27"

# Cardano libraries
pallas = "0.30"
pallas-codec = "0.30"
pallas-primitives = "0.30"
pallas-crypto = "0.30"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async trait
async-trait = "0.1"

# Utilities
hex = "0.4"
arboard = "3.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
dirs = "5.0"
dotenv = "0.15"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"